#28 - text overlap issue fixed

--- a/app/assets/stylesheets/adl/newlyadded.scss
+++ b/app/assets/stylesheets/adl/newlyadded.scss
@@ -676,3 +676,6 @@ footer.pageFooter{
       }
     }
   }
+h3 {
+  line-height: normal !important;
+}
